Fix the alignment issue for tour page

--- a/app/assets/stylesheets/tours.scss
+++ b/app/assets/stylesheets/tours.scss
@@ -17,7 +17,6 @@
     background-color: #f5f5f5;
   }
   .trip_head_wrapper {
-    margin: 0px;
     max-width: 100%;
     background: #FFFFFF;
     #trip_header {
